--- a/styles/architects.css
+++ b/styles/architects.css
@@ -73,7 +73,8 @@ nav li a {
     border: 0;
     /* border-radius: 5px; */
 }
-.banner img{
+
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
@@ -82,20 +83,63 @@ nav li a {
 /* responsive styles */
 /* mobile devices */
 @media screen and (max-width: 576px) {
-    header{
+    header {
         padding: 20px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
     }
 }
 
 /* tablet styles */
-@media screen and (min-width: 576px;) and (max-width: 980px) {
-    header{
+@media screen and (min-width: 576px; ) and (max-width: 980px) {
+    header {
         padding: 50px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
     }
+}
+
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* teams style */
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-right: 70px;
+    padding-left: 70px;
+}
+.teams-title{
+    font-size: 3rem;
+    font-weight: 500;
+}
+.quick-list{
+    font-size: 3rem;
+    font-weight: 500;
+    color: #727272;
+}
+.of-our{
+    color: #131313;
+    font-size: 3rem;
+    font-weight: 700;
+}
+.features{
+    color: #FF900E;
+    font-size: 3rem;
+    font-weight: 700;
+    font-family: 'Work Sans', sans-serif;
 }
