--- a/styles/architects.css
+++ b/styles/architects.css
@@ -23,7 +23,7 @@ nav {
     align-items: center;
 }
 
-.nav-title {
+.section-title {
     font-size: 2.8rem;
     font-weight: 700;
     color: #131313;
@@ -44,7 +44,7 @@ nav li {
 
 nav li a {
     text-decoration: none;
-    color: var(--Dark-02, #424242);
+    color: #424242;
 }
 
 /* banner-styles */
@@ -113,10 +113,112 @@ main {
     font-weight: 700;
 }
 
-.of-our {
+/* features styles */
+.features {
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+
+.featurea-img img {
+    height: 90%;
+    margin-left: 90px;
+}
+
+.features .section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.features-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.ten-years-badge {
+    text-align: center;
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 340px;
+    padding: 40px;
+    position: relative;
+    bottom: 100px;
+    /* right: 90px; */
+}
+
+.ten-years-badge h2 {
+    font-size: 4rem;
+    margin: 0;
+}
+
+.ten-years-badge p {
+    font-size: 1.5rem;
+}
+
+/* .of-our {
     color: #131313;
     font-weight: 700;
+} */
+
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
 }
+
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-card-container .card-title {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+/* sponsors styles */
+.sponsors {
+    text-align: center;
+}
+
+.sponsors-img-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+
+.sponsors-img-container img {
+    width: 165px;
+}
+
+footer {
+    background: #FFF4E7;
+    border-radius: 8px;
+    padding: 20px 50px;
+    margin: 130px 220px;
+}
+
+.footer {
+    text-align: center;
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+
 
 /* responsive styles */
 /* mobile devices */
@@ -124,25 +226,47 @@ main {
     header {
         padding: 20px;
     }
-
-    nav, .teams-container {
+    nav,
+    .teams-container,
+    .features,
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
-
-    .teams-img-container{
+    .featurea-img img {
+        width: 90%;
+        margin-left: 20px;
+    }
+    .ten-years-badge {
+        position: static;
+        max-width: 300px;
+    }
+    .teams-img-container {
         grid-template-columns: 1fr;
+    }
+    .teams-content,
+    .facts-card-container,
+    {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+
+    .facts-card-container {
+        gap: 20px;
     }
 
 }
 
 /* tablet styles */
-@media screen and (min-width: 576px; ) and (max-width: 980px) {
+@media screen and (min-width: 576px) and (max-width: 980px) {
     header {
         padding: 50px;
     }
 
-    nav, .teams-container {
+    nav,
+    .teams-container,
+    .features,
+    .sponsors-img-container {
         flex-direction: column;
     }
 }
-
